# FileRevisor

./: .clang-format  .clang-tidy  .gitignore  .pylintrc  CMakeLists.txt  CMakeMacros.cmake  CppcheckSuppressions.txt  FileRevisorDevOpsPython.sln  LICENSE.md  README.md  appveyor.yml  codecov.yml  local-sonar-project.properties  mypy.ini  run_llvm_profdata_cov.py  sonar-project.properties  travis_script.sh
FileRevisor/: CMakeLists.txt  FileRevisorMain.cpp
libFileRevisor/: CMakeLists.txt  pch.h
libFileRevisor/Compiler/: CompilerHints.h  IfMSVCIgnoreTheseWarnings.h  IfWindowsIgnoreTheseWarningsGlobally.h  MSVCIgnoredWallWarnings.h
libFileRevisor/Components/Asserter/: Asserter.cpp  Asserter.h
libFileRevisor/Components/Asserters/: Asserter.cpp  Asserter.h
libFileRevisor/Components/Console/: Console.cpp  Console.h  ConsoleColorer.cpp
libFileRevisor/Components/DataStructures/: CharArray256Helper.cpp  Map.h  Vector.cpp  Vector.h
libFileRevisor/Components/Docopt/: DocoptParser.cpp  DocoptParser.h  docopt.h
libFileRevisor/Components/ErrorHandling/: ErrorCodeTranslator.cpp  ErrorCodeTranslator.h
libFileRevisor/Components/Exceptions/: ErrorCodeTranslator.cpp  ErrorCodeTranslator.h  Exception.cpp  Exception.h  FileSystemExceptionMaker.cpp  FileSystemExceptionMaker.h  TryCatchCaller.cpp  TryCatchCaller.h
libFileRevisor/Components/FileRevisor/: FileRevisorArgsParser.cpp  FileRevisorArgsParser.h  FileRevisorPreambleMaker.cpp  FileRevisorPreambleMaker.h  FileRevisorProgram.cpp  FileRevisorProgram.h
libFileRevisor/Components/FileSystem/: DirectoryIterator.cpp  DirectoryIterator.h  FCloseDeleter.cpp  FCloseDeleter.h  FileOpenerCloser.cpp  FileOpenerCloser.h  FileReader.cpp  FileReader.h  FileSystem.cpp  FileSystem.h  FileSystemExceptions.cpp  FileSystemExceptions.h  FileSystemPather.cpp  RecursiveFileDeleter.cpp  RecursiveFileDeleter.h
libFileRevisor/Components/Strings/: ConstCharPointerGetter.cpp  ConstCharPointerGetter.h  Pluralizer.cpp  Pluralizer.h  Regexer.cpp  Regexer.h  StringUtil.cpp  StringUtil.h  TextReplacer.cpp  TextReplacer.h
libFileRevisor/Components/SubPrograms/: DeleteDirectorySubProgram.cpp  DeleteDirectorySubProgram.h  FileRevisorSubProgram.cpp  FileRevisorSubProgram.h  FileRevisorSubProgramFactory.cpp  FileRevisorSubProgramFactory.h  RenameDirectoriesSubProgram.cpp  RenameDirectoriesSubProgram.h  RenameFilesSubProgram.cpp  RenameFilesSubProgram.h  ReplaceTextInTextFilesSubProgram.cpp  ReplaceTextInTextFilesSubProgram.h
libFileRevisor/Components/Threading/: ThreadIdGetter.cpp
libFileRevisor/Components/Time/: Stopwatch.cpp  Stopwatch.h
libFileRevisor/Constants/: ErrnoValue.cpp  ErrnoValue.h
libFileRevisor/Enums/: FileExceptionType.cpp  FileExceptionType.h  ProgramMode.cpp  ProgramMode.h
libFileRevisor/Exceptions/: FileSystemException.cpp  FileSystemException.h
libFileRevisor/StaticUtilities/: ENUM_STRING_ARRAY.h  Exception.cpp  Exception.h  Map.h  ReleaseAssert.cpp  ReleaseAssert.h  STRING_ENUM_MAP.h  StringUtil.cpp  StringUtil.h  Type.cpp  Type.h  Vector.cpp  Vector.h
libFileRevisor/Utilities/: Asserter.cpp  Asserter.h  CompilerHints.h  MSVCIgnoredWallWarnings.h  ReleaseAssert.cpp  ReleaseAssert.h  STRING_ENUM_MAP.h  Type.cpp  Type.h
libFileRevisor/UtilityComponents/Assertion/: Asserter.cpp
libFileRevisor/UtilityComponents/Console/: Console.cpp  Console.h  ConsoleColorer.cpp
libFileRevisor/UtilityComponents/DataStructures/: CharArray128Helper.cpp  CharArray128Helper.h  CharArray256Helper.cpp  CharArray64Helper.cpp  CharArray64Helper.h
libFileRevisor/UtilityComponents/Docopt/: DocoptParser.cpp  DocoptParser.h  docopt.h
libFileRevisor/UtilityComponents/Strings/: ConstCharPointerGetter.cpp  ConstCharPointerGetter.h  Pluralizer.cpp  Pluralizer.h  Regexer.cpp  Regexer.h
libFileRevisor/UtilityComponents/Threading/: ThreadIdGetter.cpp  ThreadIdGetter.h
libFileRevisor/UtilityComponents/Time/: Stopwatch.cpp  Stopwatch.h
libFileRevisor/ValueTypes/: FileRevisorArgs.cpp  FileRevisorArgs.h  RenameResult.cpp  RenameResult.h
libFileRevisor/docopt/: docopt_private.h
libFileRevisorTests/: CMakeLists.txt  libFileRevisorTestsMain.cpp  pch.h
libFileRevisorTests/Components/Asserter/: AsserterTests.cpp
libFileRevisorTests/Components/Asserters/: AsserterTests.cpp
libFileRevisorTests/Components/Console/: ConsoleColorerTests.cpp  ConsoleTests.cpp
libFileRevisorTests/Components/DataStructures/: CharArray256HelperTests.cpp  MapTests.cpp  VectorTests.cpp
libFileRevisorTests/Components/Docopt/: DocoptParserTests.cpp
libFileRevisorTests/Components/ErrorHandling/: ErrorCodeTranslatorTests.cpp
libFileRevisorTests/Components/Exceptions/: ErrorCodeTranslatorTests.cpp  ExceptionTests.cpp  FileSystemExceptionMakerTests.cpp  TryCatchCallerTests.cpp
libFileRevisorTests/Components/FileRevisor/: FileRevisorArgsParserTests.cpp  FileRevisorPreambleMakerTests.cpp  FileRevisorProgramTests.cpp
libFileRevisorTests/Components/FileSystem/: DirectoryIteratorIntegrationTests.cpp  DirectoryIteratorTests.cpp  FCloseDeleterTests.cpp  FileOpenerCloserTests.cpp  FileReaderTests.cpp  FileSystemIntegrationTests.cpp  FileSystemPatherTests.cpp  FileSystemTests.cpp  RecursiveFileDeleterIntegrationTests.cpp  RecursiveFileDeleterTests.cpp
libFileRevisorTests/Components/Strings/: ConstCharPointerGetterTests.cpp  PluralizerTests.cpp  RegexerTests.cpp  StringUtilTests.cpp  TextReplacerTests.cpp
libFileRevisorTests/Components/SubPrograms/: DeleteDirectorySubProgramTests.cpp  (+5 more)
libFileRevisorTests/Constants/: ErrnoValueTests.cpp
libFileRevisorTests/Enums/: FileExceptionTypeTests.cpp  ProgramModeTests.cpp
libFileRevisorTests/Exceptions/: FileSystemExceptionTests.cpp
libFileRevisorTests/StaticUtilities/: ENUM_STRING_ARRAYTests.cpp  ExceptionTests.cpp  MapTests.cpp  ReleaseAssertTests.cpp  STRING_ENUM_MAPTests.cpp  StringUtilTests.cpp  TypeTests.cpp  VectorTests.cpp
libFileRevisorTests/Utilities/: AsserterTests.cpp  ReleaseAssertTests.cpp  STRING_ENUM_MAPTests.cpp  TypeTests.cpp
libFileRevisorTests/ValueTypes/: FileRevisorArgsTests.cpp  RenameResultTests.cpp
(+496 files in other folders)
