project(libFileRevisor)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})

folder_source_group(Compiler)
folder_source_group(Components)
folder_source_group_subfolder(Components Asserter)
folder_source_group_subfolder(Components Console)
folder_source_group_subsubfolder(Components Console Windows)
folder_source_group_subfolder(Components Docopt)
folder_source_group_subfolder(Components Exceptions)
folder_source_group_subfolder(Components FileRevisor)
folder_source_group_subfolder(Components FileSystem)
folder_source_group_subfolder(Components FunctionCallers)
folder_source_group_subsubfolder(Components FunctionCallers Member)
folder_source_group_subsubfolder(Components FunctionCallers NonMember)
folder_source_group_subfolder(Components Iteration)
folder_source_group_subsubfolder(Components Iteration Counter)
folder_source_group_subsubfolder(Components Iteration ForEach)
folder_source_group_subsubfolder(Components Iteration Math)
folder_source_group_subsubfolder(Components Iteration Transform)
folder_source_group_subfolder(Components Math)
folder_source_group_subfolder(Components Process)
folder_source_group_subsubfolder(Components Process Windows)
folder_source_group_subfolder(Components Random)
folder_source_group_subfolder(Components Strings)
folder_source_group_subfolder(Components SubPrograms)
folder_source_group_subfolder(Components Time)
folder_source_group_subfolder(Components Windows)
folder_source_group(Constants)
folder_source_group(Enums)
folder_source_group(Exceptions)
folder_source_group(StaticUtilities)
folder_source_group(ValueTypes)

file(GLOB_RECURSE Sources *.h *.cpp *.ui)
source_group("" FILES ${Sources})

add_library(libFileRevisor ${Sources})

EnablePrecompiledHeaders()

if(UNIX)
   if(CodeCovMode)
     target_link_libraries(libFileRevisor CodeCovLibraryInterface)
   endif()
endif()
