project(libFileRevisor)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})

folder_source_group(Compiler)
folder_source_group(Components)
folder_source_group_subfolder(Components ErrorHandling)
folder_source_group_subfolder(Components Exceptions)
folder_source_group_subfolder(Components FileRevisor)
folder_source_group_subfolder(Components FileSystem)
folder_source_group_subfolder(Components Math)
folder_source_group_subfolder(Components Process)
folder_source_group_subsubfolder(Components Process Windows)
folder_source_group_subfolder(Components Random)
folder_source_group_subfolder(Components SubPrograms)
folder_source_group_subfolder(Components UtilityComponents)
folder_source_group_subfolder(Components Windows)
folder_source_group(Constants)
folder_source_group(Enums)
folder_source_group(Exceptions)
folder_source_group(StaticUtilities)
folder_source_group(UtilityComponents)
folder_source_group_subfolder(UtilityComponents Console)
folder_source_group_subfolder(UtilityComponents DataStructures)
folder_source_group_subfolder(UtilityComponents Docopt)
folder_source_group_subfolder(UtilityComponents FunctionCallers)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers Member)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers NonMember)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers TryCatchCallers)
folder_source_group_subfolder(UtilityComponents Iteration)
folder_source_group_subsubfolder(UtilityComponents Iteration Counter)
folder_source_group_subsubfolder(UtilityComponents Iteration ForEach)
folder_source_group_subsubfolder(UtilityComponents Iteration Math)
folder_source_group_subsubfolder(UtilityComponents Iteration Transform)
folder_source_group_subfolder(UtilityComponents Strings)
folder_source_group_subfolder(UtilityComponents Threading)
folder_source_group_subfolder(UtilityComponents Time)
folder_source_group(ValueTypes)

file(GLOB_RECURSE Sources *.h *.cpp *.ui)
source_group("" FILES ${Sources})

add_library(libFileRevisor ${Sources})

EnablePrecompiledHeaders()

if(UNIX)
   if(LCovCodeCoverageMode)
     target_link_libraries(libFileRevisor CodeCovLibraryInterface)
   endif()
endif()
