project(libFileRevisorTests)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${ZenUnitAndMetalMockIncludeDirectory})

folder_source_group(Components)
folder_source_group_subfolder(Components FileRevisor)
folder_source_group_subsubfolder(Components FileRevisor MetalMock)
folder_source_group_subfolder(Components SubPrograms)
folder_source_group_subsubfolder(Components SubPrograms MetalMock)
folder_source_group_subfolder(Components ErrorHandling)
folder_source_group_subsubfolder(Components ErrorHandling MetalMock)
folder_source_group_subfolder(Components Exceptions)
folder_source_group_subsubfolder(Components Exceptions MetalMock)
folder_source_group_subfolder(Components Extension)
folder_source_group_subsubfolder(Components Extension MetalMock)
folder_source_group_subfolder(Components FileSystem)
folder_source_group_subsubfolder(Components FileSystem IntegrationTests)
folder_source_group_subsubfolder(Components FileSystem MetalMock)
folder_source_group_subsubfolder(Components FileSystem ZenUnit)
folder_source_group_subfolder(Components Process)
folder_source_group_subsubfolder(Components Process ZenUnit)
folder_source_group_subsubfolder(Components Process Windows)
folder_source_group_subsubsubfolder(Components Process Windows MetalMock)
folder_source_group_subfolder(Components Random)
folder_source_group_subfolder(Components UtilityComponents)
folder_source_group_subsubfolder(Components UtilityComponents MetalMock)
folder_source_group_subfolder(Components Windows)
folder_source_group_subfolder(Components ZenUnit)
folder_source_group(Constants)
folder_source_group(Enums)
folder_source_group(Exceptions)
folder_source_group_subfolder(Exceptions ZenUnit)
folder_source_group(StaticUtilities)
folder_source_group_subfolder(Utilities MetalMock)
folder_source_group(UtilityComponents)
folder_source_group_subfolder(UtilityComponents Assertion)
folder_source_group_subsubfolder(UtilityComponents Assertion MetalMock)
folder_source_group_subfolder(UtilityComponents Console)
folder_source_group_subsubfolder(UtilityComponents Console MetalMock)
folder_source_group_subfolder(UtilityComponents DataStructures)
folder_source_group_subsubfolder(UtilityComponents DataStructures MetalMock)
folder_source_group_subfolder(UtilityComponents Docopt)
folder_source_group_subsubfolder(UtilityComponents Docopt MetalMock)
folder_source_group_subsubfolder(UtilityComponents Docopt ZenUnit)
folder_source_group_subfolder(UtilityComponents FunctionCallers)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers Member)
folder_source_group_subsubsubfolder(UtilityComponents FunctionCallers Member MetalMock)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers NonMember)
folder_source_group_subsubsubfolder(UtilityComponents FunctionCallers NonMember MetalMock)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers TryCatchCallers)
folder_source_group_subsubsubfolder(UtilityComponents FunctionCallers TryCatchCallers MetalMock)
folder_source_group_subfolder(UtilityComponents Iteration)
folder_source_group_subsubfolder(UtilityComponents Iteration Counter)
folder_source_group_subsubsubfolder(UtilityComponents Iteration Counter MetalMock)
folder_source_group_subsubfolder(UtilityComponents Iteration ForEach)
folder_source_group_subsubsubfolder(UtilityComponents Iteration ForEach MetalMock)
folder_source_group_subsubfolder(UtilityComponents Iteration Math)
folder_source_group_subsubsubfolder(UtilityComponents Iteration Math MetalMock)
folder_source_group_subsubfolder(UtilityComponents Iteration Transform)
folder_source_group_subsubsubfolder(UtilityComponents Iteration Transform MetalMock)
folder_source_group_subfolder(UtilityComponents Strings)
folder_source_group_subsubfolder(UtilityComponents Strings MetalMock)
folder_source_group_subfolder(UtilityComponents Threading)
folder_source_group_subfolder(UtilityComponents Time)
folder_source_group_subsubfolder(UtilityComponents Time MetalMock)
folder_source_group_subsubfolder(UtilityComponents Time ZenUnit)
folder_source_group(ValueTypes)
folder_source_group_subfolder(ValueTypes ZenUnit)

file(GLOB_RECURSE Sources *.h *.cpp)
source_group("" FILES ${Sources})

add_executable(libFileRevisorTests ${Sources})
set_property(TARGET libFileRevisorTests PROPERTY CXX_STANDARD 20)
target_link_libraries(libFileRevisorTests libFileRevisor)
if(UNIX AND NOT APPLE)
   target_link_libraries(libFileRevisorTests stdc++fs)
endif()
if(MSVC)
   replace(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/O2" "/Od")
   replace(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/Ob2" "/Ob0")
   replace(CMAKE_EXE_LINKER_FLAGS_DEBUG "/debug" "/DEBUG:FASTLINK")
   replace(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "/debug" "")
endif()

IfMSVCEnablePrecompiledHeaders()
IfMSVCAddRunTestsPostBuildStep()

if(UNIX AND NOT APPLE)
   if(LCovCodeCoverageMode)
     target_link_libraries(libFileRevisorTests CodeCovLibraryInterface)
   endif()
endif()
