project(libFileRevisorTests)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

if(UNIX)
   find_package(TBB REQUIRED)
endif()

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${ZenUnitAndMetalMockIncludeDirectory})

folder_source_group(Components)
folder_source_group_subfolder(Components Asserters)
folder_source_group_subsubfolder(Components Asserters MetalMock)
folder_source_group_subfolder(Components Console)
folder_source_group_subsubfolder(Components Console MetalMock)
folder_source_group_subfolder(Components DataStructures)
folder_source_group_subsubfolder(Components DataStructures MetalMock)
folder_source_group_subfolder(Components Docopt)
folder_source_group_subsubfolder(Components Docopt MetalMock)
folder_source_group_subsubfolder(Components Docopt ZenUnit)
folder_source_group_subfolder(Components FileRevisor)
folder_source_group_subsubfolder(Components FileRevisor MetalMock)
folder_source_group_subfolder(Components FunctionCallers)
folder_source_group_subsubfolder(Components FunctionCallers Member)
folder_source_group_subsubsubfolder(Components FunctionCallers Member MetalMock)
folder_source_group_subsubfolder(Components FunctionCallers NonMember)
folder_source_group_subsubsubfolder(Components FunctionCallers NonMember MetalMock)
folder_source_group_subsubfolder(Components FunctionCallers TryCatchCallers)
folder_source_group_subsubsubfolder(Components FunctionCallers TryCatchCallers MetalMock)
folder_source_group_subfolder(Components SubPrograms)
folder_source_group_subsubfolder(Components SubPrograms MetalMock)
folder_source_group_subfolder(Components ErrorHandling)
folder_source_group_subsubfolder(Components ErrorHandling MetalMock)
folder_source_group_subfolder(Components Exceptions)
folder_source_group_subsubfolder(Components Exceptions MetalMock)
folder_source_group_subfolder(Components Extension)
folder_source_group_subsubfolder(Components Extension MetalMock)
folder_source_group_subfolder(Components FileSystem)
folder_source_group_subsubfolder(Components FileSystem IntegrationTests)
folder_source_group_subsubfolder(Components FileSystem MetalMock)
folder_source_group_subsubfolder(Components FileSystem ZenUnit)
folder_source_group_subfolder(Components Iteration)
folder_source_group_subsubfolder(Components Iteration Counter)
folder_source_group_subsubsubfolder(Components Iteration Counter MetalMock)
folder_source_group_subsubfolder(Components Iteration ForEach)
folder_source_group_subsubsubfolder(Components Iteration ForEach MetalMock)
folder_source_group_subsubfolder(Components Iteration Math)
folder_source_group_subsubsubfolder(Components Iteration Math MetalMock)
folder_source_group_subsubfolder(Components Iteration Transform)
folder_source_group_subsubsubfolder(Components Iteration Transform MetalMock)
folder_source_group_subfolder(Components Process)
folder_source_group_subsubfolder(Components Process ZenUnit)
folder_source_group_subsubfolder(Components Process Windows)
folder_source_group_subsubsubfolder(Components Process Windows MetalMock)
folder_source_group_subfolder(Components Random)
folder_source_group_subfolder(Components Strings)
folder_source_group_subsubfolder(Components Strings MetalMock)
folder_source_group_subfolder(Components Threading)
folder_source_group_subfolder(Components Time)
folder_source_group_subsubfolder(Components Time MetalMock)
folder_source_group_subsubfolder(Components Time ZenUnit)
folder_source_group_subfolder(Components Windows)
folder_source_group(Constants)
folder_source_group(Enums)
folder_source_group(Exceptions)
folder_source_group_subfolder(Exceptions ZenUnit)
folder_source_group(StaticUtilities)
folder_source_group(ValueTypes)
folder_source_group_subfolder(ValueTypes ZenUnit)

file(GLOB_RECURSE Sources *.h *.cpp)
source_group("" FILES ${Sources})

add_executable(libFileRevisorTests ${Sources})
target_link_libraries(libFileRevisorTests libFileRevisor)
if(UNIX)
   set_property(TARGET libFileRevisorTests PROPERTY LINKER_TYPE LLD)
   target_link_libraries(libFileRevisorTests TBB::tbb)
   if(NOT IncludeWhatYouUseMode)
      target_precompile_headers(libFileRevisorTests PRIVATE pch.h)
      set_target_properties(libFileRevisorTests PROPERTIES UNITY_BUILD ON)
      set_target_properties(libFileRevisorTests PROPERTIES UNITY_BUILD_BATCH_SIZE 8)
   endif()
   if(LCovCodeCoverageMode)
     target_link_libraries(libFileRevisorTests CodeCovLibraryInterface)
   endif()
elseif(MSVC)
   replace(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/O2" "/Od")
   replace(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/Ob2" "/Ob0")
   replace(CMAKE_EXE_LINKER_FLAGS_DEBUG "/debug" "/DEBUG:FASTLINK")
   replace(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "/debug" "")
   IfMSVCEnablePrecompiledHeaders()
   set_target_properties(libFileRevisorTests PROPERTIES UNITY_BUILD ON)
   set_target_properties(libFileRevisorTests PROPERTIES UNITY_BUILD_BATCH_SIZE 8)
   append(CMAKE_CXX_FLAGS "/FIpch.h")
   IfMSVCAddRunTestsPostBuildStep()
endif()

